--- a/Home/style.css
+++ b/Home/style.css
@@ -70,8 +70,10 @@ footer {
 }
 
 .home-connect-links .connect-links {
+	display: flex;
 	list-style-type: none;
 	font-size: 1.2rem;
+	flex-direction: column;
 }
 
 .home-title {
@@ -91,4 +93,5 @@ footer {
 	background-color: aquamarine;
 	font-size: 3rem;
 	border-radius: 10px;
+	margin-bottom: -20rem;
 }
