--- a/Home/style.css
+++ b/Home/style.css
@@ -19,6 +19,10 @@ body {
 header {
 	font-size: 2rem;
 }
+.nav-logo {
+	width: 50px;
+	border-radius: 5px;
+}
 
 main {
 	display: flex;
@@ -87,6 +91,7 @@ footer {
 	text-align: center;
 	font-size: 2.5rem;
 	margin-bottom: 1.5rem;
+	color: ghostwhite;
 }
 
 .home-title .get-started {
@@ -94,4 +99,8 @@ footer {
 	font-size: 3rem;
 	border-radius: 10px;
 	margin-bottom: -20rem;
+}
+.get-started:hover {
+	color: white;
+	background-color: black;
 }
