feat:added media query

--- a/Home/style.css
+++ b/Home/style.css
@@ -114,3 +114,10 @@ footer {
 	color: white;
 	background-color: black;
 }
+@media screen and (max-width: 768px) {
+	body {
+		display: none;
+	}
+}
+
+/* (min-width: 1024px) */
