--- a/Home/style.css
+++ b/Home/style.css
@@ -17,7 +17,7 @@ body {
 	/* background-image: url(https://d36tnp772eyphs.cloudfront.net/blogs/1/2018/12/Budir-Church-Iceland.jpg); */
 	background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fget.pxhere.com%2Fphoto%2Farchitecture-house-town-roof-building-old-red-tower-religion-landmark-church-chapel-historic-christian-place-of-worship-religious-spire-steeple-monastery-saint-christianity-worship-holy-historical-estate-old-church-rural-area-spanish-missions-in-california-452808.jpg&f=1&nofb=1&ipt=a6730266f5f997a4e02c933e03832f8a59bed78cd8b94aa3bb6acc7240885513&ipo=images);
 	background-position: 100%;
-	font-family: sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 }
 header {
 	font-size: 2rem;
@@ -86,7 +86,8 @@ footer {
 	text-decoration: overline;
 	transition: 0.5s ease-in-out;
 	border: 1px solid black;
-	border-radius: 50%;
+	border-radius: 10%;
+	background-color: red;
 }
 
 .home-connect-links .connect-links {
@@ -127,19 +128,28 @@ footer {
 	color: white;
 	background-color: black;
 }
-.humberger {
+.closeBtn,
+.openBtn {
 	display: none;
+	cursor: pointer;
 }
+
 @media screen and (max-width: 768px) {
 	.navs-btn {
 		/* display: none; */
 		flex-direction: column;
 		align-items: center;
+		display: none;
 	}
 	.connect-links > i {
 		font-size: 5vh;
 	}
-	.humberger {
-		display: contents;
+	.openBtn {
+		display: block;
+	}
+	.closeBtn {
+		display: block;
+		top: 20px;
+		right: 20px;
 	}
 }
