--- a/Home/style.css
+++ b/Home/style.css
@@ -132,6 +132,9 @@ footer {
 .openBtn {
 	display: none;
 	cursor: pointer;
+	background-color: #fff;
+	border-radius: 5px;
+	padding: 5px 10px;
 }
 
 @media screen and (max-width: 768px) {
@@ -140,18 +143,17 @@ footer {
 		flex-direction: column;
 		align-items: center;
 		display: none;
-		margin-top: 2rem;
-		background-color: #fff;
+		margin: auto;
 		border-radius: 5px;
 	}
 	.connect-links > i {
 		font-size: 5vh;
 	}
 	.openBtn {
-		display: none;
+		display: block;
 	}
 	.closeBtn {
-		display: block;
+		display: none;
 		top: 20px;
 		right: 20px;
 		position: absolute;
