--- a/Home/style.css
+++ b/Home/style.css
@@ -82,6 +82,10 @@ footer {
 	flex-direction: column;
 	justify-content: space-between;
 }
+.navs-btn li a {
+	text-decoration: none;
+	color: #fff;
+}
 .navs-btn > li:hover {
 	color: white;
 	text-decoration: overline;
@@ -165,7 +169,7 @@ footer {
 }
 
 /* drop down menu */
-.dvbs-dropdown {
+.dropdown {
 	background-color: black;
 	width: 180px;
 	line-height: 45px;
@@ -173,14 +177,18 @@ footer {
 	visibility: hidden;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	text-align: center;
+	border-radius: 5px;
 }
-.dvbs-dropdown > li {
+.dropdown > li {
 	width: 100%;
 	display: block;
 	font-weight: 400px;
 }
-.navs-btn li:hover .dvbs-dropdown {
+.navs-btn li:hover .dropdown {
 	visibility: visible;
 	opacity: 1;
+}
+.faqs {
+	text-align: left;
 }
