--- a/Home/style.css
+++ b/Home/style.css
@@ -9,14 +9,14 @@
 }
 
 body {
+	width: 100%;
 	font-size: 1rem;
 	height: 100vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	background-image: url(https://images8.alphacoders.com/529/529702.jpg);
-	/* background-image: url(https://jooinn.com/images/church-114.jpg); */
-	background-position: 50%;
+	background-position: 100%;
 	background-size: cover;
 
 	font-family: Arial, Helvetica, sans-serif;
