--- a/Home/style.css
+++ b/Home/style.css
@@ -25,7 +25,7 @@ header {
 	font-size: 2rem;
 }
 .nav-logo {
-	width: 50px;
+	width: 140px;
 	border-radius: 50%;
 	cursor: none;
 	align-self: start;
@@ -151,6 +151,9 @@ footer {
 		display: none;
 		margin: auto;
 		border-radius: 5px;
+	}
+	.nav-logo {
+		width: 100px;
 	}
 	.connect-links > i {
 		font-size: 5vh;
