--- a/Home/style.css
+++ b/Home/style.css
@@ -122,8 +122,9 @@ footer {
 	color: ghostwhite;
 }
 
-.home-title .get-started {
-	background-color: aquamarine;
+/* .home-title */
+.get-started {
+	/* background-color: aquamarine; */
 	font-size: 3rem;
 	border-radius: 10px;
 	margin-bottom: -20rem;
@@ -133,6 +134,9 @@ footer {
 .get-started:hover {
 	color: white;
 	background-color: black;
+}
+.get-started > a {
+	text-decoration: none;
 }
 .closeBtn,
 .openBtn {
