--- a/Home/style.css
+++ b/Home/style.css
@@ -102,6 +102,7 @@ footer {
 	font-size: 1.2rem;
 	flex-direction: column;
 	cursor: pointer;
+	width: 20%;
 }
 .connect-links > i:hover {
 	color: black;
@@ -122,12 +123,11 @@ footer {
 	color: ghostwhite;
 }
 
-/* .home-title */
-.get-started {
-	/* background-color: aquamarine; */
+.home-title .get-started {
+	background-color: aquamarine;
 	font-size: 3rem;
 	border-radius: 10px;
-	margin-bottom: -20rem;
+	/* margin-bottom: -300px; */
 	padding: 1rem;
 	cursor: pointer;
 }
